app-src/scripts/edit-on-click/_edit-on-click-d.scss
[edit-on-click-duration],
[edit-on-click] {
  cursor: text;
  transition: all .20s $ease-in-out-quint;
  transition-property: opacity, transform;
  display: block;
  background: inherit;
  position: relative;
  overflow: visible;
  user-select: none;
  caret-color: #000000;

  @include dark-theme() {
    caret-color: #ffffff;
  }

  &:after {
    background: #ffffff;
    transition: all .20s $ease-in-out-quint;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    content: '';
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.8), $whiteframe-shadow-13dp;
    opacity: 0;
    z-index: -1;
    border: 1px solid black;
    pointer-events: none;

    @include dark-theme() {
      background: $dark-theme-bg-darker;
      border: 1px solid #ffffff;
      box-shadow: 0 0 4px 0 rgba(255, 255, 255, 0.8), $whiteframe-shadow-13dp;
    }
  }

  &:focus {
    z-index: 5;
    user-select: all;
    transform: scale(1.1);
    &:after {
      opacity: 1;
    }

    @media(max-width: $layout-xs) {
      transform: scale(1.05);
    }
  }
}

